--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Googgle Fonts Styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Normalize Style -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <!-- Site Style -->
+    <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -8,19 +22,29 @@
   <body>
     <!-- Header -->
 
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="logotype">
+          <span class="accent">web</span>studio</a
+        >
+        <ul class="header-list">
+          <li class="header-item"><a href="" class="link">Studio</a></li>
+          <li class="header-item"><a href="" class="link">Portfolio</a></li>
+          <li class="header-item"><a href="" class="link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="social-adress">
+        <ul class="social-list">
+          <li class="social-item">
+            <a href="mailto:info@devstudio.com" class="social-link link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="social-item">
+            <a href="tel:+110001111111" class="social-link link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
@@ -28,38 +52,40 @@
     <!-- Main -->
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-image">
+        <h1 class="hero-image-text">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-image-button">Order Service</button>
       </section>
+
+      <!-- Feature -->
 
       <section>
         <h2>Feature</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="feature-list">
+          <li class="feature-item">
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="feature-item">
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -67,48 +93,128 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- Team -->
+
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
-              src="./images/Mark.jpg"
+              src="./images/mark.jpg"
               alt="Mark Guerrero"
+              class="team-img"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title-name">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/Tom.jpg"
+              src="./images/tom.jpg"
               alt="Tom Ford"
+              class="team-img"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title-name">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/Camila.jpg"
+              src="./images/camila.jpg"
               alt="Camila Garcia"
+              class="team-img"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title-name">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/Daniel.jpg"
+              src="./images/daniel.jpg"
               alt="Daniel Wilson"
+              class="team-img"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title-name">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Portfolio -->
+
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-name">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
@@ -116,9 +222,11 @@
 
     <!-- Footer -->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logotype-footer logotype">
+        <span class="accent">web</span>studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
