--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logotype">
-          <span class="accent">web</span>studio</a
+        <a href="./index.html" class="logotype"
+          >web<span class="accent">studio</span></a
         >
         <ul class="header-list">
           <li class="header-item"><a href="" class="link">Studio</a></li>
