--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="logotype"
-          >web<span class="accent">studio</span></a
+          >Web<span class="accent">Studio</span></a
         >
         <ul class="header-list">
           <li class="header-item"><a href="" class="link">Studio</a></li>
@@ -223,8 +223,8 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html" class="logotype-footer logotype">
-        <span class="accent">web</span>studio</a
+      <a href="./index.html" class="logotype-footer logotype"
+        >web<span class="accent">studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
