--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           >Web<span class="accent">Studio</span></a
         >
         <ul class="header-list">
-          <li class="header-item"><a href="" class="link">Studio</a></li>
+          <li class="header-item">
+            <a href="./index.html" class="link">Studio</a>
+          </li>
           <li class="header-item"><a href="" class="link">Portfolio</a></li>
           <li class="header-item"><a href="" class="link">Contacts</a></li>
         </ul>
