--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="logotype-footer logotype"
-        >web<span class="accent">studio</span></a
+        >web<span class="accent">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
