--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html" class="logotype-footer logotype"
-        >web<span class="accent">Studio</span></a
+      <a href="./index.html" class="logotype-footer"
+        >web<span class="footer-span">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
