--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html" class="logotype-footer"
+      <a href="./index.html" class="logotype-footer logotype"
         >web<span class="footer-span">Studio</span></a
       >
       <p class="footer-text">
